--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuex-orm/core": "^0.31.12",
+    "@vuex-orm/plugin-graphql": "^1.0.0-rc.36",
     "buefy": "^0.8.15",
     "core-js": "^3.6.4",
+    "graphql": "^14.6.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
