--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "flush-promises": "^1.0.2",
+    "unfetch": "^4.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
