--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -17,7 +17,7 @@ jobs:
       with:
         node-version: 13.x
     - run: npm ci
-    - run: npm lint
+    - run: npm run lint
   
   test:
     runs-on: ubuntu-latest
@@ -34,4 +34,4 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build
-    - run: npm test:unit
+    - run: npm run test:unit
