--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -35,3 +35,7 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm run test:unit
+    - name: Coveralls GitHub Action
+      uses: coverallsapp/github-action@v1.1.1
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
